--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <name>junglejump</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://github.com/bionade24/junglejump</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,6 +18,13 @@
     <lwjgl.version>3.2.3</lwjgl.version>
     <lwjgl.natives>natives-linux</lwjgl.natives>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>bintray</id>
+      <url>https://dl.bintray.com/</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
